--- a/Movie_Recommendation_Engine_with_Naive_Bayes_from_scratch/Movie_Recommendation_Engine_with_Naive_Bayes_from_scratch.ipynb
+++ b/Movie_Recommendation_Engine_with_Naive_Bayes_from_scratch/Movie_Recommendation_Engine_with_Naive_Bayes_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "d630f2ea",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "1cac289e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "e44a2990",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "36c394b8",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f6e78d39",
    "metadata": {},
    "outputs": [
@@ -99,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "343adddf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_likelihood(feature, label_indices, smoothing=0):\n",
+    "def get_likelihood(features, label_indices, smoothing=0):\n",
     "    \"\"\"\n",
     "    Compute likelihood based on training samples\n",
     "    @param features: matrix of features\n",
@@ -112,7 +112,86 @@
     "    @param smoothing: integer, additive smoothing parameter\n",
     "    @return: dictionary, with class as key, corresponding conditional probability P(feature|class) vector as value\n",
     "    \"\"\"\n",
-    "    "
+    "    likelihood = {}\n",
+    "    for label, indices in label_indices.items():\n",
+    "        likelihood[label] = features[indices, :].sum(axis=0) + smoothing\n",
+    "        total_count = len(indices)\n",
+    "        likelihood[label] = likelihood[label]/(total_count + 2*smoothing)\n",
+    "    return likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "61206277",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Likelihood:\n",
+      " {'Y': array([0.4, 0.6, 0.4]), 'N': array([0.33333333, 0.33333333, 0.66666667])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "smoothing = 1\n",
+    "likelihood = get_likelihood(X_train, label_indices, smoothing)\n",
+    "print('Likelihood:\\n', likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "92cd3b7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_posterior(X, prior, likelihood):\n",
+    "    \"\"\"\n",
+    "    Compute posterior of testing samples, based on prior and likelihood\n",
+    "    @param X: testing samples\n",
+    "    @param prior: dictionary, with class label as key, corresponding prior as the value\n",
+    "    @param likelihood: dictionary, with class label as key, corresponding conditional probability vector as value\n",
+    "    @return: dictionary, with class label as key, correspoding posterior as value\n",
+    "    \"\"\"\n",
+    "    posteriors = []\n",
+    "    for x in X:\n",
+    "        # posterior is proportional to prior*likelihood\n",
+    "        posterior = prior.copy()\n",
+    "        for label, likelihood_label in likelihood.items():\n",
+    "            for index, bool_value in enumerate(x):\n",
+    "                posterior[label] *= likelihood_label[index] if bool_value else (1 - likelihood_label[index])\n",
+    "        # normalize so that all sums up to 1\n",
+    "        sum_posterior = sum(posterior.values())\n",
+    "        for label in posterior:\n",
+    "            if posterior[label] == float('inf'):\n",
+    "                posterior[label] = 1.0\n",
+    "            else:\n",
+    "                posterior[label] /= sum_posterior\n",
+    "        posteriors.append(posterior.copy())\n",
+    "    return posteriors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "39933862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Posterior:\n",
+      " [{'Y': 0.9210360075805433, 'N': 0.07896399241945673}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "posterior = get_posterior(X_test, prior, likelihood)\n",
+    "print('Posterior:\\n', posterior)"
    ]
   }
  ],
